syntax = "proto3";
package worker;

message RegisterRequest {
  string name = 1;
  string address = 2;
}
message RegisterResponse {
  repeated int64 worker_id = 1;
  int64 heartbeat_ttl = 2;
}

message HeartbeatRequest {
  string name = 1;
  repeated int64 worker_id = 2;
}
message HeartbeatResponse {
  repeated int64 worker_id = 1;
  int64 heartbeat_ttl = 2;
}

service Worker {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}
